<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingStart="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/combo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:id="@+id/maxlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:id="@+id/maxexp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryTextColor" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="3">

        <TextView
            android:layout_column="0"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:text="@string/level"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:text="@string/lvl_1"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:id="@+id/lvlmax"
            android:layout_column="0"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:layout_column="1"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:text="@string/hp"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/hplvl1"
            android:layout_column="1"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:id="@+id/hplvlmax"
            android:layout_column="1"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:layout_column="2"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:text="@string/atk"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/atklvl1"
            android:layout_column="2"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:id="@+id/atklvlmax"
            android:layout_column="2"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:layout_column="3"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:text="@string/rcv"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/rcvlvl1"
            android:layout_column="3"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:textColor="@color/secondaryTextColor" />


        <TextView
            android:id="@+id/rcvlvlmax"
            android:layout_column="3"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:textColor="@color/secondaryTextColor" />


    </GridLayout>


</LinearLayout>